# pi-session-manager

./: .git_commit_msg_windows_fix.txt  .gitignore  AGENTS.md  BADGE_FINAL_IMPLEMENTATION.md  BADGE_IMPLEMENTATION.md  BUGFIX_SUMMARY.md  CHANGELOG.md  CONTINUE_FROM_HERE.md  CONTRIBUTING.md  Cargo.toml  DASHBOARD_OPTIMIZATION_REPORT.md  Dockerfile.cli  EXPANDABLE_OUTPUT_FIX.md  EXPORT_BUTTON_DEBUG.md  EXPORT_FEATURE.md  GIT_BRANCH_AUDIT_20250214.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_PLAN_20250214.md  README.md  README.zh.md  SIDEBAR_FEATURES.md  STATUS.md  SYSTEM_DESIGN.md  TASK_SPEC.md  TODO.md  build_frontend_baseline.txt  conversation-2026-02-03.txt  index.html  package-lock.json  package.json  pnpm-lock.yaml  session-tree-search-enhancement.json  tailwind.config.js  test-badge-functionality.sh  test-dashboard-optimization.sh  test-dashboard-performance.md  test-export.sh  test_results_fts_baseline.txt  tsconfig.json  vite.config.ts
.agentlens/: .manifest.json  AGENT.md  INDEX.md
.github/workflows/: build.yml  ci.yml  release.yml  website.yml
archive/: BASH_COPY_BUTTON.md  CODE_BLOCK_ENHANCEMENT.md  DIFF_RENDERING_FIX.md  DRAG_FIX.md  FILE_WATCHER_IMPLEMENTATION.md  HANDOFF.md  HOVER_PREVIEW_FEATURE.md  LanguageSwitcher.tsx  MIGRATION_PLAN.md  PADDING_FIX.md  PI_RPC_MODE_RESEARCH.md  PROJECT_SUMMARY.md  RUST_CLEANUP_SUMMARY.md  SEARCH_DEBUG_GUIDE.md  SEARCH_FEATURE.md  SEARCH_USAGE_GUIDE.md  SESSION_ENHANCEMENT_PLAN.md  SESSION_LIST_IMPROVEMENTS.md  SESSION_TREE_TOOL_DISPLAY.md  SIDEBAR_BEAUTIFY_COMPLETE.md  SIDEBAR_BEAUTIFY_PLAN.md  SIDEBAR_COMPARISON.md  SIDEBAR_FINAL_SUMMARY.md  SIDEBAR_FIXES.md  SIDEBAR_FIXES_COMPLETE.md  SIDEBAR_IMPROVEMENT_COMPLETE.md  SIDEBAR_IMPROVEMENT_PLAN.md  SIDEBAR_SUMMARY.md  SIDEBAR_TEST_GUIDE.md  TOOL_CALL_ENHANCEMENT.md  settings-tasks.json
docs/: 2026-01-30-search-and-project-view-optimization.md  KANBAN_UX_ANALYSIS.md  KANBAN_UX_BBD_TESTS.md  SEARCH_SYSTEM_ANALYSIS.md  TODO.md
docs/handoff/: 20250210-terminal-feature.md
docs/issues/: 20260130-Enhance search and add directory-based session grouping.md  20260130-Implement 2-layer SQLite cache with incremental updates.md  20260130-Implement complete i18n (internationalization) support.md  20260131-实现会话列表自动刷新和状态 Badge 功能.md  20260213-hardcoded-chinese-audit.md  20260213-hardcoded-chinese-quickref.md  20260213-hardcoded-chinese-scan.md  20260213-hardcoded-chinese-summary.md  20260214-pi-config-tui-refactor.md
docs/pr/: 20260131-dashboard-performance-optimization.md  20260213-i18n-advanced-settings-and-tag-init.md  20260213-i18n-complete.md  20260213-i18n-phase1-complete.md  20260214-Extract dispatch.rs and bridge CLI to shared business logic.md
scripts/: build-cli.sh  build-cli.ts  clear-badge-database.sh  test-all.sh  test-bash-copy.sh  test-beautify.sh  test-codeblock.sh  test-debounce.sh  test-export-full.sh  test-file-watcher.sh  test-fixes.sh  test-hover-preview.sh  test-search.sh  test-sessiontree.sh  test-sidebar.sh  test-toolcall.sh
src/: App.tsx  App.tsx.backup  index.css  main.tsx  transport.ts  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri-cli/: Cargo.toml
src-tauri-cli/src/: file_watcher.rs  main.rs  terminal.rs
src-tauri/capabilities/: default.json
src-tauri/examples/: search_poc.rs
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  auth.rs  commands.rs  compression.rs  config.rs  dispatch.rs  export.rs  file_watcher.rs  http_adapter.rs  lib.rs  main-cli.rs  main.rs  metrics.rs  models.rs  scanner.rs  scanner_scheduler.rs  search.rs  session_parser.rs  settings_store.rs  sqlite_cache.rs  stats.rs  tantivy_search.rs  terminal.rs  write_buffer.rs  ws_adapter.rs
src-tauri/src/commands/: auth_cmds.rs  cache.rs  favorites.rs  mod.rs  models.rs  search.rs  session.rs  settings.rs  skills.rs  tags.rs  terminal.rs
src-tauri/tests/: export_test.rs  fts_integration_test.rs  fts_message_integrity_test.rs  full_text_search_command_test.rs  full_text_search_integration_test.rs  full_text_search_pagination_test.rs  integration_test.rs  metrics_test.rs  migration_test.rs  search_test.rs  write_buffer_eviction_test.rs
src/components/: ActivityHeatmap.tsx  AssistantMessage.tsx  AuthGate.tsx  BashExecution.tsx  CodeBlock.tsx  ConnectionBanner.tsx  (+49 more)
website/: .gitignore  middleware.ts  next.config.mjs  package-lock.json  package.json
(+291 files in other folders)
