[package]
name = "pi-session-manager"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
tauri = { version = "2.10.1", features = ["devtools"] }
tauri-plugin-shell = "2.3.5"
tauri-plugin-dialog = "2.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11"
glob = "0.3"
dirs = "5.0"
tantivy = "0.22"
lazy_static = "1.4"
rusqlite = { version = "0.32", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = "0.3"
toml = "0.8"
notify = "6.1"
notify-debouncer-full = "0.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[lints.rust]
dead_code = "allow"
unused_variables = "allow"
unused_imports = "allow"
unused_mut = "allow"
unused_extern_crates = "allow"
unused_crate_dependencies = "allow"
unreachable_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "allow"
nursery = "allow"

[dev-dependencies]
tempfile = "3.10"
