[package]
name = "pi-session-manager"
version = "0.1.0"
edition = "2021"
default-run = "pi-session-manager"

[[bin]]
name = "pi-session-manager"
path = "src/main.rs"
required-features = ["gui"]

[[bin]]
name = "pi-session-cli"
path = "src/main-cli.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [], optional = true }

[features]
default = ["gui"]
gui = ["dep:tauri", "dep:tauri-plugin-shell", "dep:tauri-plugin-dialog", "dep:tauri-build"]
cli = []
custom-protocol = ["tauri?/custom-protocol"]

[dependencies]
tauri = { version = "2.1", features = ["devtools"], optional = true }
tauri-plugin-shell = { version = "2.1", optional = true }
tauri-plugin-dialog = { version = "2.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11"
dirs = "5.0"
tantivy = "0.22"
lazy_static = "1.4"
rusqlite = { version = "0.32", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = "0.3"
toml = "0.8"
notify = "6.1"
notify-debouncer-full = "0.3"
tokio-tungstenite = "0.21"
futures-util = "0.3"
log = "0.4"
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
rust-embed = "8"
mime_guess = "2"
portable-pty = "0.9"
async-stream = "0.3.6"

[lints.rust]
dead_code = "allow"
unused_variables = "allow"
unused_imports = "allow"
unused_mut = "allow"
unused_extern_crates = "allow"
unused_crate_dependencies = "allow"
unreachable_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "allow"
nursery = "allow"

[dev-dependencies]
tempfile = "3.10"
